src/grids/sass/includes/_util-mobile.scss
/*
 * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 * wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt
*/
@import "compass/css3/inline-block";

.float-right, .float-left {
	float: none !important;
}

form {
	[class*=width-] {
		width: 100% !important;
	}
	[class*=margin-], [class*=span-]{
		margin: 0 !important;
	}

	&.background-light > * {
		outline: none;
		margin-left: 0;
		margin-right: 0;
	}
}

.form-inline {
		& > * {
			margin-right: 0;
		}

		label {
			display: block;
		}
}

.form-radio, .form-checkbox {
	padding: 0;
	&.form-label-inline {
		display: block;
		padding: 0;
	}
}

.form-horizontal {
	label {
		text-align: left;
	}
}

.form-input-append {
	button {
		position: absolute;
	}
}

input[type="image"], input[type="checkbox"], input[type="radio"] {
	+ label {
		display: block;
	}
}

ul {
	&.button-group {
		margin-left:0;
		margin-right:0;
	}
}

.border-top, .border-right, .border-bottom, .border-left, .border-all {
	float: none !important;
	display: block;
	outline: none;
	position: static !important;
	background: none;
}

.module-billboard {
	max-width: 280px;
}

.module-poster {
	@include inline-block;
}

.date-month {
	a {
		color: #fff !important;
	}
}

.bb-pre7 {
	input:focus, input:active, textarea:focus, textarea:active, select:focus, select:active, .ui-input-text.ui-focus, .ui-input-search.ui-focus {
		background: #333 !important;
		color: #f9f9f9 !important;
	}
}

